html view port fixed
xd

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,6 +5,7 @@
     <title>GUI MGT0LS</title>
     <link rel="icon" href="{{ url_for('static', filename='css/owl.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
+    <meta name="viewport" content="width=device=width, initial-scale=1.0">
 
     <!-- HEAD es para todo lo que se importa o se agrega, pero no se renderiza -->
 </head>
